--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,13 @@
+.body {
+  padding: 0%;
+}
+
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .logo {
@@ -9,11 +16,17 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  padding-left: 0%;
+  display: flex;
 }
 
 a {
@@ -22,4 +35,10 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+}
+
+li {
+  margin: 10px;
+  padding: 10px;
+  border-style: dashed;
 }
