--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,11 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-evenly;
+  gap: 10px;
+  padding: 10px;
+  align-items: center;
 }
 
 .profile-image {
@@ -27,6 +32,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  margin-left: 10px;
 }
 
 button {
@@ -45,4 +51,9 @@ a {
 
 ul {
   list-style-type: none;
+  padding-left: 0%;
+  display: flex;
+  margin-right: auto;
+  gap: 5px;
+  justify-content: space-evenly;
 }
