--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -67,3 +67,35 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+.modal {
+  display: flex;
+  padding: 16px;
+  gap: 16px;
+}
+
+.icon {
+  flex-shrink: 0;
+}
+.container {
+  display: flex;
+  flex-flow: wrap;
+  align-items: center;
+  flex-grow: 0;
+  flex-shrink: 2;
+}
+
+.header {
+  font-weight: bold;
+  margin-right: auto;
+  margin-bottom: 8px;
+}
+
+.text,
+.close-button {
+  margin-bottom: 8px;
+}
+
+.continue {
+  margin-right: 4px;
+}
